cabal-version:  2.4
name:           maybreak-derivingvia
version:        0.1.0.0
author:         Mizunashi Mana
license:        MIT
build-type:     Simple
extra-source-files:
    README.md

library
  build-depends:
    base,
    transformers,
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      TestSpace.PolyKinds
